--- a/index.html
+++ b/index.html
@@ -1,35 +1,51 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Filipe's Portifolio</title>
+    <title>My resume</title>
 </head>
 <body>
-    <h1>Filipe's Portifolio</h1>
-    <h2>I'm a developer</h2>
-    <hr />
-    <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-    <img src="./assets/images/movie-ranking.png" height="200" alt="Movie ranking project preview" />
-    <h3><a href="./public/birthday-invite.html">Birthday invite project</a></h3>
-    <img src="./assets/images/birthday-invite.png" height="200" alt="Birthday invite project" />
-    <hr />
-    <a href="./public/about.html">About me</a>
-    <a href="./public/contact.html">Contact me</a>
+    <h1>Filipe César</h1>
+    <img src="./assets/images/me.png" height="100" alt="Filipe" />
+
+    <h2>Summary</h2>
+    <p>I'm learning programming to achieve new goals.</p>
+    <hr>
+    <h2>Education</h2>
+    <o><li>6 months computer science</li></o>
+        <hr>
+        <h2>Work Experience</h2>
+        <ul>
+            <li><h3>Kitchen Assistant</h3></li>
+            <p>March 2024 - Present</p>
+        </ul>
+        <ul>
+            <li>Wash dishes</li>
+            <Li>Help the chef</Li>
+            <li>Keep the kitchen clean</li>
+        </ul>
+        <hr>
+        <h2>Skills</h2>
+        <ul>
+            <li>Deadline compliance</li>
+            <li>Resilience in situations of pressure</li>
+            <Li>Flexible</Li>
+        </ul>
+        <hr>
+        <h2>Certifications</h2>
+        <ul>
+            <li>Android Developer 60 hours</li>
+        </ul>
+        <hr>
+        
+        <h2>Other</h2>
+        <ul>
+            <li><a href="./myhobbiies.html">My Hobbies</a></li>
+            <li><a href="./contactme.html">Contact me</a></li>
+        </ul>
+        <footer>
+            <p>© Filipe Digital Marketing 2024. All right reserved.</p>
+        </footer>
 </body>
 </html>
-
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
-
-<!-- TODO 4: Add titles/subtitles etc. -->
-
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
